After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699314 - rtph264pay: CRITICAL **: gst_adapter_map: assertion `size > 0' failed
rtph264pay: CRITICAL **: gst_adapter_map: assertion `size > 0' failed
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal critical
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-30 14:10 UTC by Sam
Modified: 2013-05-01 14:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Debug Log (556.38 KB, application/x-xz)
2013-04-30 14:10 UTC, Sam
Details

Description Sam 2013-04-30 14:10:17 UTC
Created attachment 242916 [details]
Debug Log

The server runs fine. One client is able to connect and view the stream perfectly. Once another client tries to connect to view the stream, test-launch does not crash yet gives the Critical error ** (lt-test-launch:2326): CRITICAL **: gst_adapter_map: assertion `size > 0' failed.

The second client is not able to connect and view the stream

Stack trace: http://pastebin.com/P0n4UYbW

Gstreamer: 1.1.0.1
Plugins: all master from git
Debug Log attached.
Comment 1 Sebastian Dröge (slomo) 2013-05-01 13:45:17 UTC
Program received signal SIGTRAP, Trace/breakpoint trap.

Thread 2813113456 (LWP 2352)

  • #0 raise
    from /lib/arm-linux-gnueabihf/libpthread.so.0
  • #1 g_logv
    at gmessages.c line 758
  • #2 g_log
    at gmessages.c line 792
  • #3 g_return_if_fail_warning
    at gmessages.c line 801
  • #4 gst_adapter_map
    at gstadapter.c line 442
  • #5 gst_rtp_h264_pay_handle_buffer
    at gstrtph264pay.c line 1076
  • #6 gst_rtp_h264_pay_sink_event
    at gstrtph264pay.c line 1316
  • #7 gst_rtp_base_payload_sink_event
    at gstrtpbasepayload.c line 404
  • #8 gst_pad_send_event_unchecked
    at gstpad.c line 4868
  • #9 gst_pad_push_event_unchecked
    at gstpad.c line 4564
  • #10 push_sticky
    at gstpad.c line 3286
  • #11 events_foreach
    at gstpad.c line 514
  • #12 check_sticky
    at gstpad.c line 3334
  • #13 gst_pad_push_event
    at gstpad.c line 4681
  • #14 gst_base_transform_sink_eventfunc
    at gstbasetransform.c line 1854
  • #15 gst_base_transform_sink_event
    at gstbasetransform.c line 1794
  • #16 gst_pad_send_event_unchecked
    at gstpad.c line 4868
  • #17 gst_pad_push_event_unchecked
    at gstpad.c line 4564
  • #18 push_sticky
    at gstpad.c line 3286
  • #19 events_foreach
    at gstpad.c line 514
  • #20 check_sticky
    at gstpad.c line 3334
  • #21 gst_pad_push_event
    at gstpad.c line 4681
  • #22 gst_video_encoder_push_event
    at gstvideoencoder.c line 895
  • #23 gst_video_encoder_sink_event_default
    at gstvideoencoder.c line 1035
  • #24 gst_video_encoder_sink_event
    at gstvideoencoder.c line 1063
  • #25 gst_pad_send_event_unchecked
    at gstpad.c line 4868
  • #26 gst_pad_push_event_unchecked
    at gstpad.c line 4564
  • #27 push_sticky
    at gstpad.c line 3286
  • #28 events_foreach
    at gstpad.c line 514
  • #29 check_sticky
    at gstpad.c line 3334
  • #30 gst_pad_push_event
    at gstpad.c line 4681
  • #31 gst_base_transform_sink_eventfunc
    at gstbasetransform.c line 1854
  • #32 gst_base_transform_sink_event
    at gstbasetransform.c line 1794
  • #33 gst_pad_send_event_unchecked
    at gstpad.c line 4868
  • #34 gst_pad_push_event_unchecked
    at gstpad.c line 4564
  • #35 push_sticky
    at gstpad.c line 3286
  • #36 events_foreach
    at gstpad.c line 514
  • #37 check_sticky
    at gstpad.c line 3334
  • #38 gst_pad_push_event
    at gstpad.c line 4681
  • #39 gst_base_transform_sink_eventfunc
    at gstbasetransform.c line 1854
  • #40 gst_base_transform_sink_event
    at gstbasetransform.c line 1794
  • #41 gst_pad_send_event_unchecked
    at gstpad.c line 4868
  • #42 gst_pad_push_event_unchecked
    at gstpad.c line 4564
  • #43 push_sticky
    at gstpad.c line 3286
  • #44 events_foreach
    at gstpad.c line 514
  • #45 check_sticky
    at gstpad.c line 3334
  • #46 gst_pad_push_event
    at gstpad.c line 4681
  • #47 gst_base_src_loop
    at gstbasesrc.c line 2815
  • #48 gst_task_func
    at gsttask.c line 316
  • #49 default_func
    at gsttaskpool.c line 70
  • #50 g_thread_pool_thread_proxy
    at gthreadpool.c line 309
  • #51 g_thread_proxy
    at gthread.c line 801
  • #52 start_thread
    from /lib/arm-linux-gnueabihf/libpthread.so.0
  • #53 ??
    from /lib/arm-linux-gnueabihf/libc.so.6
  • #54 ??
    from /lib/arm-linux-gnueabihf/libc.so.6

Comment 2 Sebastian Dröge (slomo) 2013-05-01 13:50:28 UTC
commit ae05ed4f058dc9a6884c874e64ee3dcdb656e90e
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Wed May 1 15:49:45 2013 +0200

    rtph264pay: If the adapter is empty on EOS don't try to map its content
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699314