rtph264pay: If the adapter is empty on EOS don't try to map its content

https://bugzilla.gnome.org/show_bug.cgi?id=699314